tests/baselines/reference/scannerNumericLiteral9(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
scannerNumericLiteral9.ts(1,1): error TS1489: Decimals with leading zeros are not allowed.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== scannerNumericLiteral9.ts (1 errors) ====
    009
    ~~~
!!! error TS1489: Decimals with leading zeros are not allowed.